// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GroupHeader /> tests LOADING snapshot test 1`] = `
<div>
  <div
    class="groupedHeader"
    data-open="false"
    data-status="loading"
  >
    <div
      class="sectionSummary"
    >
      <span
        class="bp3-icon StyledProps--main chevron"
        data-icon="spinner"
      >
        <svg
          fill="none"
          height="16"
          viewBox="0 0 36 36"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 2.084a15.915 15.915 0 010 31.831 15.915 15.915 0 010-31.83"
            stroke="currentColor"
            stroke-dasharray="75,100"
            stroke-linecap="round"
            stroke-width="2.8"
            style="animation: 1s linear infinite spinner-rotation; transform-origin: 50% 50%; transform-box: fill-box;"
          />
        </svg>
      </span>
      <span
        class="bp3-icon bp3-icon-circle StyledProps--main status"
        icon="circle"
      >
        <svg
          data-icon="circle"
          height="12"
          viewBox="0 0 16 16"
          width="12"
        >
          <desc>
            circle
          </desc>
          <path
            d="M8 0C3.6 0 0 3.6 0 8s3.6 8 8 8 8-3.6 8-8-3.6-8-8-8zm0 14c-3.3 0-6-2.7-6-6s2.7-6 6-6 6 2.7 6 6-2.7 6-6 6z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <div
        class="text"
      >
        <div>
          Header 1
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<GroupHeader /> tests SUCCESS snapshot test 1`] = `
<div>
  <div
    class="groupedHeader"
    data-open="false"
    data-status="success"
  >
    <div
      class="sectionSummary"
    >
      <span
        class="bp3-icon bp3-icon-chevron-right StyledProps--main chevron"
        icon="chevron-right"
      >
        <svg
          data-icon="chevron-right"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            chevron-right
          </desc>
          <path
            d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp3-icon bp3-icon-tick-circle StyledProps--main status"
        icon="tick-circle"
      >
        <svg
          data-icon="tick-circle"
          height="12"
          viewBox="0 0 16 16"
          width="12"
        >
          <desc>
            tick-circle
          </desc>
          <path
            d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <div
        class="text"
      >
        <div>
          Header 1
        </div>
        <div>
          MOCK DURATION
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<GroupHeader /> tests toggle should not work if onSectionClick returns false 1`] = `
<div>
  <div
    class="groupedHeader"
    data-open="false"
    data-status="success"
  >
    <div
      class="sectionSummary"
    >
      <span
        class="bp3-icon bp3-icon-chevron-right StyledProps--main chevron"
        icon="chevron-right"
      >
        <svg
          data-icon="chevron-right"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            chevron-right
          </desc>
          <path
            d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp3-icon bp3-icon-tick-circle StyledProps--main status"
        icon="tick-circle"
      >
        <svg
          data-icon="tick-circle"
          height="12"
          viewBox="0 0 16 16"
          width="12"
        >
          <desc>
            tick-circle
          </desc>
          <path
            d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <div
        class="text"
      >
        <div>
          Header 1
        </div>
        <div>
          MOCK DURATION
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<GroupHeader /> tests toggle works 1`] = `
<div>
  <div
    class="groupedHeader"
    data-open="true"
    data-status="success"
  >
    <div
      class="sectionSummary"
    >
      <span
        class="bp3-icon bp3-icon-chevron-right StyledProps--main chevron"
        icon="chevron-right"
      >
        <svg
          data-icon="chevron-right"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            chevron-right
          </desc>
          <path
            d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span
        class="bp3-icon bp3-icon-tick-circle StyledProps--main status"
        icon="tick-circle"
      >
        <svg
          data-icon="tick-circle"
          height="12"
          viewBox="0 0 16 16"
          width="12"
        >
          <desc>
            tick-circle
          </desc>
          <path
            d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <div
        class="text"
      >
        <div>
          Header 1
        </div>
        <div>
          MOCK DURATION
        </div>
      </div>
    </div>
  </div>
</div>
`;
